# CppLogging

./: .appveyor.yml  .gitattributes  .gitlinks  .gitmodules  .hashlog  .travis.yml  CMakeLists.txt  README.md  TODO.md  annotated.html  appender_8h.html  appender_8h_source.html  appenders_8h.html  appenders_8h_source.html  async_8cpp-example.html  async__buffer_8h.html  async__buffer_8h_source.html  async__buffer_8inl.html  async__buffer_8inl_source.html  async__processor_8cpp.html  async__processor_8cpp_source.html  async__processor_8h.html  async__processor_8h_source.html  async__wait__free__buffer_8h.html  async__wait__free__buffer_8h_source.html  async__wait__free__buffer_8inl.html  async__wait__free__buffer_8inl_source.html  async__wait__free__processor_8cpp.html  async__wait__free__processor_8cpp_source.html  async__wait__free__processor_8h.html  async__wait__free__processor_8h_source.html  async__wait__free__queue_8h.html  async__wait__free__queue_8h_source.html  async__wait__free__queue_8inl.html  async__wait__free__queue_8inl_source.html  async__wait__processor_8cpp.html  async__wait__processor_8cpp_source.html  async__wait__processor_8h.html  async__wait__processor_8h_source.html  binary__layout_8cpp.html  (+365 more)
.github/workflows/: build-windows-msys2.yml
documents/: Doxyfile
examples/: advanced_features.cpp  async.cpp  console.cpp  default.cpp  file.cpp  format.cpp  hashlog.cpp  layout.cpp  rolling_size.cpp  rolling_time.cpp  sync.cpp  syslog.cpp  test.cpp
include/: version.h
include/logging/: appender.h  appenders.h  config.h  element.h  filter.h  filters.h  layout.h  layouts.h  level.h  level.inl  logger.h  logger.inl  processor.h  processors.h  record.h  record.inl  trigger.h  version.h
include/logging/appenders/: console_appender.h  debug_appender.h  error_appender.h  file_appender.h  file_appender2.h  memory_appender.h  null_appender.h  ostream_appender.h  rolling_file_appender.h  rolling_file_appender.inl  syslog_appender.h
include/logging/filters/: level_filter.h  logger_filter.h  message_filter.h  smart_classifier.h  switch_filter.h
include/logging/layouts/: binary_layout.h  empty_layout.h  hash_layout.h  null_layout.h  text_layout.h
include/logging/processors/: async_buffer.h  async_buffer.inl  async_processor.h  async_wait_free_buffer.h  async_wait_free_buffer.inl  async_wait_free_processor.h  async_wait_free_queue.h  async_wait_free_queue.inl  async_wait_processor.h  buffered_processor.h  consistent_processor.h  dynamic_router.h  exclusive_processor.h  load_balanced_processor.h  log_merger.h  sensitive_data_processor.h  sync_processor.h
modules/: CMakeLists.txt  CppCommon.cmake  nlohmann_json.cmake  openssl.cmake  zlib.cmake
perf/: appender_console.cpp  appender_file.cpp  appender_null.cpp  binary_layout.cpp  console_appender.cpp  file_async.cpp  file_sync.cpp  layout.cpp  layout_binary.cpp  layout_text.cpp  null_appender.cpp  processor_async.cpp  processor_async_ex.cpp  processor_sync.cpp  template_class.cpp  template_function.cpp  text_layout.cpp
performance/: appender_console.cpp  appender_file.cpp  appender_null.cpp  async_format.cpp  file_async.cpp  file_sync.cpp  format.cpp  layout.cpp  processor_async.cpp  processor_sync.cpp
scripts/hashlog-map/: README.md  hashlog-map  hashlog-map.bat  hashlog-map.py  setup.py
scripts/make-hashlog/: make-hashlog.py  setup.cfg  setup.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  defines_0.js  (+105 more)
source/logging/: config.cpp  logger.cpp  processor.cpp  record.cpp
source/logging/appenders/: console_appender.cpp  debug_appender.cpp  error_appender.cpp  file_appender.cpp  file_appender2.cpp  memory_appender.cpp  ostream_appender.cpp  rolling_file_appender.cpp  syslog_appender.cpp
source/logging/appenders/minizip/: iowin32.c  zip.c
source/logging/filters/: level_filter.cpp  logger_filter.cpp  message_filter.cpp  smart_classifier.cpp  switch_filter.cpp
source/logging/layouts/: binary_layout.cpp  hash_layout.cpp  text_layout.cpp
source/logging/processors/: async_processor.cpp  async_wait_free_processor.cpp  async_wait_processor.cpp  buffered_processor.cpp  consistent_processor.cpp  dynamic_router.cpp  exclusive_processor.cpp  load_balanced_processor.cpp  log_merger.cpp  sensitive_data_processor.cpp  sync_processor.cpp
tests/: test_appender_file.cpp  test_appender_file_rolling.cpp  test_binary_layout.cpp  test_layout_binary.cpp  test_layout_text.cpp  test_record_format.cpp  test_template_class.cpp  test_text_layout.cpp
tools/binlog/: binlog.cpp
tools/binlogread/: binlogread.cpp
tools/hashlog/: hashlog.cpp
tools/make-hashlog/: README.md  make-hashlog  make-hashlog.bat  make-hashlog.py  setup.py
